CSS Bug fixes
-Web bug: content off-centered
-Phone bug: scroll issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@
 @media (max-width: 600px) {
     .page {
         padding: 0.5rem;
+        padding-bottom: 0;
     }
 }
 
@@ -29,8 +30,11 @@
     }
 
     body {
-        transform: scale(1.2);
-        margin-top: 8vh;
+        transform: scale(1.3);
+        transform-origin: center;
+        display: flex;
+        justify-content: center;
+        margin-top: 15vh;
     }
 }
 
@@ -39,13 +43,13 @@ body {
 }
 
 .page {
-    width: min(100vw, 410px);
-    min-width: 325px;
-    height: 94vh;
+    width: 100vw;
+    min-width: 410px;
+    max-width: 500px;
+    height: 93vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 10px;
 }
 
 .counter-container {
